--- a/AdminLteExample/Views/Customers/AddDetail.cshtml
+++ b/AdminLteExample/Views/Customers/AddDetail.cshtml
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 
-                <input type="hidden" name="CustomerId" value="@Model.Id" />
+                <input type="hidden" name="CustomerId" value="@Model.CustomerId" />
             </div>
             <!-- /.box-body -->
             <div class="box-footer">
