--- a/AdminLteExample/Views/Customers/Update.cshtml
+++ b/AdminLteExample/Views/Customers/Update.cshtml
@@ -57,7 +57,7 @@
                         <input type="Email" class="form-control" name="Email" value="@Model.Email">
                     </div>
                 </div>
-                <input type="hidden" name="Id" value="@Model.Id" />
+                <input type="hidden" name="Id" value="@Model.CustomerId" />
             </div>
             <!-- /.box-body -->
             <div class="box-footer">
