--- a/AdminLteExample/Views/Shared/_LayoutMainFooter.cshtml
+++ b/AdminLteExample/Views/Shared/_LayoutMainFooter.cshtml
@@ -8,5 +8,5 @@
         @*Anything you want*@
     </div>
     <!-- Default to the left -->
-    <strong>Copyright &copy; <a href="#">CAREX</a>.</strong> Tüm hakları saklıdır.
+    <strong>Copyright &copy; @DateTime.Now.Year <a href="/Home/Index">CAREX</a>.</strong> Tüm hakları saklıdır.
 </footer>
