--- a/AdminLteExample/Views/Account/Login.cshtml
+++ b/AdminLteExample/Views/Account/Login.cshtml
@@ -38,15 +38,15 @@
                     <span class="login100-form-title p-t-20 p-b-45">
                         Admin Girişi
                     </span>
-                    <div class="wrap-input100 validate-input m-b-10" data-validate="Email is required">
-                        <input class="input100" type="text" name="email" id="email" placeholder="E-posta">
+                    <div class="wrap-input100 validate-input m-b-10" data-validate="Name is required">
+                        <input class="input100" type="text" name="Name" id="Name" placeholder="Kullanıcı Adı">
                         <span class="focus-input100"></span>
                         <span class="symbol-input100">
                             <i class="fa fa-user"></i>
                         </span>
                     </div>
                     <div class="wrap-input100 validate-input m-b-10" data-validate="Password is required">
-                        <input class="input100" type="password" name="password" id="password" placeholder="Şifre">
+                        <input class="input100" type="password" name="Password" id="Password" placeholder="Şifre">
                         <span class="focus-input100"></span>
                         <span class="symbol-input100">
                             <i class="fa fa-lock"></i>
@@ -81,8 +81,8 @@
                 type: "POST",
                 url: '@Url.Action("Validate", "Account")',
                 data: {
-                    email: $('#email').val(),
-                    password: $('#password').val()
+                    name: $('#Name').val(),
+                    password: $('#Password').val()
                 },
                 error: function (result) {
                     alert("Girdiğin e-posta ve şifre kayıtlarımızla eşleşmedi. Lütfen doğru girdiğinden emin ol ve tekrar dene.");
