--- a/AdminLteExample/Views/Customers/Create.cshtml
+++ b/AdminLteExample/Views/Customers/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@*@model AdminLteExample.Models.Customer*@
+﻿@model Tuple<AdminLteExample.Models.CarBrands,AdminLteExample.Models.CarModels>;
+@*@model AdminLteExample.Models.Customer*@
 <!-- Content Header (Page header) -->
 <section class="content-header">
     <h1>
@@ -21,19 +22,21 @@
                     <div class="col-sm-10">
                         <input type="text" class="form-control" name="CarPlate" placeholder="Araç Plakası">
                         @*@Html.TextBoxFor(m => m.CarPlate, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.CarPlate, "", new { @style = "color-red" })*@
+                            @Html.ValidationMessageFor(m => m.CarPlate, "", new { @style = "color-red" })*@
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">Marka</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" name="Brand" placeholder="Marka">
+                        @Html.DropDownListFor(m => m.Item1.BrandName, (List<SelectListItem>)ViewBag.markalar, new { @class = "form-control" })
+                        @*<input type="text" class="form-control" name="Brand" placeholder="Marka">*@
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">Model</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" name="Model" placeholder="Model">
+                        @*@Html.DropDownListFor(m => m.Item2.ModelName, (List<SelectListItem>)ViewBag.modeller, new { @class = "form-control" })*@
+                        @*<input type="text" class="form-control" name="Model" placeholder="Model">*@
                     </div>
                 </div>
                 <div class="form-group">
