--- a/AdminLteExample/Views/Customers/UpdateDetail.cshtml
+++ b/AdminLteExample/Views/Customers/UpdateDetail.cshtml
@@ -24,7 +24,7 @@
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">Uygulama Tarihi</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" name="OperationDate" placeholder="Uygulama Tarihi" value="@Model.OperationDate.Value.ToShortDateString()">
+                        <input type="text" class="form-control" name="OperationDate" placeholder="Uygulama Tarihi" value="@Model.OperationDate">
                     </div>
                 </div>
                 <div class="form-group">
