--- a/AdminLteExample/Views/Customers/Create.cshtml
+++ b/AdminLteExample/Views/Customers/Create.cshtml
@@ -35,7 +35,7 @@
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">Model</label>
                     <div class="col-sm-10">
-                        @*@Html.DropDownListFor(m => m.Item2.ModelName, (List<SelectListItem>)ViewBag.modeller, new { @class = "form-control" })*@
+                        @Html.DropDownListFor(m => m.Item2.ModelName, (List<SelectListItem>)ViewBag.modeller, new { @class = "form-control" })
                         @*<input type="text" class="form-control" name="Model" placeholder="Model">*@
                     </div>
                 </div>
